--- a/Library.html
+++ b/Library.html
@@ -25,22 +25,58 @@
         <a href="#Speed">속도</a>
         <a href="#Mosaic">모자이크</a>
         <a href="#PIP">PIP</a>
-    </div>
-    <!--음성 인식으로 들어오는 자막에 대한 정보를 표시 합니다.
-        저장 버튼도 있습니다.-->
-    <div class="subtitleScreen">
-        <a id="save" href="#Save">저장</a>
+        <div class="file_input_div">
+            <img src="images/addVideoButton.png" class="file_input_img_btn" width=27.78% height=50px alt="open" />
+            <input class="file_input_hidden" id="newlocalFILE" name="localfile" size="50" maxlength="100000" accept="video/webm,video/mp4" type="file" onchange="loadLocalVID(true)">
+        </div>
     </div>
 
+    <!--파일 이름을 나타내는 단락입니다.
+        파일이 로딩 되면 나타납니다.-->
+    <div class="file_name">
+        <p>Add your video!</p>
+    </div>
 
+    <!--플레이어 창을 나타내는 단락입니다. -->
+    <div class="player">
+        <div ondrop="dropHandler(event)" ondragover="dragOverHandler(event)" onclick="videoPlayPause()">
+            <video id="myVideo" preload="auto" oncontextmenu="return false;" width="640" onplay="onPlay()" onpause="onPause()">
+                <source id="VID" src="" type="">
+            </video>
+        </div>
+    </div>
+
+    <!--재생, 시간, 슬라이더 등이 표시되는 단락입니다.-->
+    <div class="player_tools">
+        <button id="playButton" onclick="videoPlayPause()"><img src="images/playVideoButton.png" width=20px height=20px ></button>
+        <span id="current1"></span>
+        <span id="current2">--</span>
+        <span>/</span>
+        <span id="end">--</span>
+        <input name="slider" id="slider" type="range" step="0.001" oninput="updateSlider(this.value) ">
+    </div>
+
+    <!--편집된 현재 상황이 텍스트로 나타나는 단락입니다.
+        캔버스라고 정의했습니다.-->
+    <div class="canvas">
+        <p style="font-size: 10px;">이 단락은 캔버스에 해당하는 내용을 담습니다.</p>
+    </div>
+
+    <!--블록들을 저장하는 단락입니다.
+        팔레트라고 정의했습니다.-->
     <div class="pallet">
-        <button>영상추가</button>
-        <button>video 1</button>
-        <button>video 2</button>
-        <button>video 3</button>
-        <button>video 4</button>
-        <button>video 5</button>
+        <input type="text" id="order" value="">
+        <input type="text" id="block" value="">
+        <p style="font-size: 10px;">이 단락은 팔레트에 해당하는 내용을 담습니다.</p>
     </div>
+
+    <!--편집 기능들을 저장하는 단락입니다.-->
+    <div class="edit_tools">
+        <a id="save" href="#Save">저장</a>
+        <p style="font-size: 10px;">이 단락은 편집 도구에 해당하는 내용을 담습니다.</p>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
